--- a/CompilerMainWin.ui
+++ b/CompilerMainWin.ui
@@ -28,78 +28,100 @@
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
+     <widget class="QTabWidget" name="tabs">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>460</width>
+        <height>541</height>
+       </size>
+      </property>
+      <property name="tabPosition">
+       <enum>QTabWidget::North</enum>
+      </property>
+      <property name="tabShape">
+       <enum>QTabWidget::Rounded</enum>
+      </property>
+      <property name="currentIndex">
+       <number>0</number>
+      </property>
+      <property name="tabsClosable">
+       <bool>true</bool>
+      </property>
+      <property name="movable">
+       <bool>true</bool>
+      </property>
+      <widget class="QWidget" name="tab">
+       <attribute name="title">
+        <string>Tab 1</string>
+       </attribute>
+      </widget>
+      <widget class="QWidget" name="tab_2">
+       <attribute name="title">
+        <string>Tab 2</string>
+       </attribute>
+      </widget>
+     </widget>
+    </item>
+    <item>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
-       <widget class="QPushButton" name="create_proj">
+       <widget class="QLabel" name="hard_spacer">
         <property name="minimumSize">
          <size>
-          <width>231</width>
-          <height>81</height>
+          <width>14</width>
+          <height>16</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>231</width>
-          <height>81</height>
+          <width>323</width>
+          <height>16</height>
          </size>
         </property>
         <property name="text">
-         <string>Создать проект</string>
+         <string/>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="generate">
+       <widget class="QGraphicsView" name="graphicsView">
         <property name="minimumSize">
          <size>
-          <width>231</width>
-          <height>91</height>
+          <width>200</width>
+          <height>320</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>231</width>
-          <height>91</height>
+          <width>800</width>
+          <height>16777215</height>
          </size>
-        </property>
-        <property name="text">
-         <string>Сгенерировать</string>
         </property>
        </widget>
       </item>
       <item>
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
+       <widget class="QPushButton" name="pushButton">
+        <property name="minimumSize">
          <size>
-          <width>20</width>
+          <width>320</width>
           <height>40</height>
          </size>
         </property>
-       </spacer>
+        <property name="maximumSize">
+         <size>
+          <width>320</width>
+          <height>40</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Генерировать</string>
+        </property>
+       </widget>
       </item>
      </layout>
-    </item>
-    <item>
-     <widget class="QGraphicsView" name="show_img">
-      <property name="minimumSize">
-       <size>
-        <width>540</width>
-        <height>540</height>
-       </size>
-      </property>
-      <property name="verticalScrollBarPolicy">
-       <enum>Qt::ScrollBarAlwaysOff</enum>
-      </property>
-      <property name="horizontalScrollBarPolicy">
-       <enum>Qt::ScrollBarAlwaysOff</enum>
-      </property>
-      <property name="sizeAdjustPolicy">
-       <enum>QAbstractScrollArea::AdjustToContents</enum>
-      </property>
-     </widget>
     </item>
    </layout>
   </widget>
@@ -116,6 +138,7 @@
     <property name="title">
      <string>Файл</string>
     </property>
+    <addaction name="action_3"/>
     <addaction name="action"/>
     <addaction name="action_2"/>
     <addaction name="separator"/>
@@ -126,17 +149,22 @@
   <widget class="QStatusBar" name="statusbar"/>
   <action name="action">
    <property name="text">
-    <string>Открыть</string>
+    <string>Открыть проект</string>
    </property>
   </action>
   <action name="action_2">
    <property name="text">
-    <string>Сохранить</string>
+    <string>Сохранить проект</string>
    </property>
   </action>
   <action name="action_4">
    <property name="text">
     <string>Выход</string>
+   </property>
+  </action>
+  <action name="action_3">
+   <property name="text">
+    <string>Новый проект</string>
    </property>
   </action>
  </widget>
