--- a/Forms/ColorItem.ui
+++ b/Forms/ColorItem.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ColorItem</class>
- <widget class="QWidget" name="ColorItem">
+ <class>UiColorItem</class>
+ <widget class="QWidget" name="UiColorItem">
   <property name="geometry">
    <rect>
     <x>0</x>
