--- a/Forms/ColorSettings.ui
+++ b/Forms/ColorSettings.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ColorSettings</class>
- <widget class="QDialog" name="ColorSettings">
+ <class>UiColorSettings</class>
+ <widget class="QDialog" name="UiColorSettings">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -124,14 +124,14 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="QCheckBox" name="checkBox_2">
+         <widget class="QCheckBox" name="random_value">
           <property name="text">
            <string>Корректировая яркость</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="checkBox">
+         <widget class="QCheckBox" name="random_saturation">
           <property name="text">
            <string>Заменять насыщенность</string>
           </property>
@@ -154,7 +154,7 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_7">
         <item>
-         <widget class="QRadioButton" name="random_ch_2">
+         <widget class="QRadioButton" name="enumer_ch">
           <property name="minimumSize">
            <size>
             <width>82</width>
@@ -213,9 +213,9 @@
          </spacer>
         </item>
         <item>
-         <widget class="QToolButton" name="toolButton_2">
+         <widget class="QToolButton" name="tb_rem">
           <property name="enabled">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <property name="minimumSize">
            <size>
@@ -232,12 +232,22 @@
           <property name="text">
            <string>➖</string>
           </property>
+          <property name="icon">
+           <iconset resource="../res.qrc">
+            <normaloff>:/image/icon/resourses/CMinus.ico</normaloff>:/image/icon/resourses/CMinus.ico</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>20</width>
+            <height>20</height>
+           </size>
+          </property>
          </widget>
         </item>
         <item>
-         <widget class="QToolButton" name="toolButton">
+         <widget class="QToolButton" name="tb_add">
           <property name="enabled">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <property name="minimumSize">
            <size>
@@ -255,7 +265,17 @@
            <string notr="true">font: 75 8pt &quot;MS Shell Dlg 2&quot;; color: rgb(0, 222, 0)</string>
           </property>
           <property name="text">
-           <string>✚</string>
+           <string>➕</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../res.qrc">
+            <normaloff>:/image/icon/resourses/CPlus.ico</normaloff>:/image/icon/resourses/CPlus.ico</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>20</width>
+            <height>20</height>
+           </size>
           </property>
          </widget>
         </item>
@@ -276,6 +296,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../res.qrc"/>
+ </resources>
  <connections/>
 </ui>
