--- a/Forms/MainWin.ui
+++ b/Forms/MainWin.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWin</class>
- <widget class="QMainWindow" name="MainWin">
+ <class>UiMainWin</class>
+ <widget class="QMainWindow" name="UiMainWin">
   <property name="geometry">
    <rect>
     <x>0</x>
