--- a/Forms/FileList.ui
+++ b/Forms/FileList.ui
@@ -43,8 +43,21 @@
          <height>30</height>
         </size>
        </property>
+       <property name="toolTip">
+        <string>Закрыть</string>
+       </property>
        <property name="text">
-        <string>❌</string>
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../res.qrc">
+         <normaloff>:/image/icon/resourses/cross.ico</normaloff>:/image/icon/resourses/cross.ico</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>24</width>
+         <height>24</height>
+        </size>
        </property>
        <property name="flat">
         <bool>true</bool>
@@ -71,6 +84,12 @@
        <property name="icon">
         <iconset resource="../res.qrc">
          <normaloff>:/image/icon/resourses/CPlus.ico</normaloff>:/image/icon/resourses/CPlus.ico</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>24</width>
+         <height>24</height>
+        </size>
        </property>
       </widget>
      </item>
