--- a/Forms/ProjTab.ui
+++ b/Forms/ProjTab.ui
@@ -95,6 +95,12 @@
         <iconset resource="../res.qrc">
          <normaloff>:/image/icon/resourses/Folder.ico</normaloff>:/image/icon/resourses/Folder.ico</iconset>
        </property>
+       <property name="iconSize">
+        <size>
+         <width>24</width>
+         <height>24</height>
+        </size>
+       </property>
       </widget>
      </item>
     </layout>
@@ -154,6 +160,12 @@
         <iconset resource="../res.qrc">
          <normaloff>:/image/icon/resourses/CMinus.ico</normaloff>:/image/icon/resourses/CMinus.ico</iconset>
        </property>
+       <property name="iconSize">
+        <size>
+         <width>24</width>
+         <height>24</height>
+        </size>
+       </property>
       </widget>
      </item>
      <item>
@@ -176,6 +188,12 @@
        <property name="icon">
         <iconset resource="../res.qrc">
          <normaloff>:/image/icon/resourses/CPlus.ico</normaloff>:/image/icon/resourses/CPlus.ico</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>24</width>
+         <height>24</height>
+        </size>
        </property>
       </widget>
      </item>
