--- a/Forms/ColorItem.ui
+++ b/Forms/ColorItem.ui
@@ -40,6 +40,9 @@
        <height>35</height>
       </size>
      </property>
+     <property name="toolTip">
+      <string>Выбор цвета. Белый, чёрный и градации серого приведут к обесцвечиванию.</string>
+     </property>
      <property name="styleSheet">
       <string notr="true">border: 1px solid black; background-color: rgb(255, 255, 255);</string>
      </property>
@@ -66,6 +69,9 @@
    </item>
    <item>
     <widget class="QCheckBox" name="Saturation">
+     <property name="toolTip">
+      <string>Указывает, нужно ли при подмене цвета на указанный так же заменять насыщенность.</string>
+     </property>
      <property name="text">
       <string>Заменять
 Насыщенность</string>
@@ -74,6 +80,9 @@
    </item>
    <item>
     <widget class="QCheckBox" name="Value">
+     <property name="toolTip">
+      <string>Указывает, что при подмене цвета необходимо сдвинуть усреднённую яркость исходника к яркости выбранного цвета</string>
+     </property>
      <property name="text">
       <string>Корректировать
 Яркость</string>
