--- a/Forms/Layer.ui
+++ b/Forms/Layer.ui
@@ -199,7 +199,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="path_edit">
+      <widget class="QLineEditDC" name="path_edit">
        <property name="minimumSize">
         <size>
          <width>0</width>
@@ -357,6 +357,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QLineEditDC</class>
+   <extends>QLineEdit</extends>
+   <header>qlineeditdc.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="../res.qrc"/>
  </resources>
