--- a/Forms/ProjTab.ui
+++ b/Forms/ProjTab.ui
@@ -140,7 +140,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QToolButton" name="toolButton_2">
+      <widget class="QToolButton" name="rem">
        <property name="minimumSize">
         <size>
          <width>25</width>
@@ -169,7 +169,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QToolButton" name="toolButton">
+      <widget class="QToolButton" name="add">
        <property name="minimumSize">
         <size>
          <width>25</width>
