--- a/Forms/FileList.ui
+++ b/Forms/FileList.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>356</width>
-    <height>159</height>
+    <height>233</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -25,87 +25,57 @@
   <property name="modal">
    <bool>false</bool>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
-    <widget class="QPlainTextEdit" name="plainTextEdit">
-     <property name="plainText">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <layout class="QVBoxLayout" name="verticalLayout">
+    <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <widget class="QPlainTextEdit" name="plainTextEdit">
+       <property name="plainText">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
-         <property name="sizeType">
-          <enum>QSizePolicy::Fixed</enum>
-         </property>
          <property name="sizeHint" stdset="0">
           <size>
-           <width>8</width>
-           <height>12</height>
+           <width>40</width>
+           <height>20</height>
           </size>
          </property>
         </spacer>
        </item>
        <item>
-        <widget class="QPushButton" name="close">
-         <property name="minimumSize">
-          <size>
-           <width>14</width>
-           <height>14</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>14</width>
-           <height>14</height>
-          </size>
-         </property>
+        <widget class="QPushButton" name="apply">
          <property name="toolTip">
-          <string>Закрыть</string>
-         </property>
-         <property name="statusTip">
-          <string/>
+          <string>Сохранить изменения</string>
          </property>
          <property name="text">
-          <string/>
+          <string>Сохранить</string>
          </property>
-         <property name="icon">
-          <iconset resource="../res.qrc">
-           <normaloff>:/image/icon/resourses/cross.ico</normaloff>:/image/icon/resourses/cross.ico</iconset>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="reject">
+         <property name="toolTip">
+          <string>Не применять изменения</string>
          </property>
-         <property name="iconSize">
-          <size>
-           <width>12</width>
-           <height>12</height>
-          </size>
-         </property>
-         <property name="flat">
-          <bool>true</bool>
+         <property name="text">
+          <string>Отмена</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
-     <item>
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
+    </layout>
+   </item>
+   <item>
+    <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QToolButton" name="add">
        <property name="minimumSize">
@@ -140,6 +110,19 @@
         </size>
        </property>
       </widget>
+     </item>
+     <item>
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
