--- a/Forms/MainWin.ui
+++ b/Forms/MainWin.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1188</width>
+    <height>652</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -32,7 +32,7 @@
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout" stretch="2,1">
+   <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="2,1">
     <item>
      <widget class="QTabWidget" name="tabs">
       <property name="enabled">
@@ -59,6 +59,9 @@
       <property name="movable">
        <bool>true</bool>
       </property>
+      <property name="tabBarAutoHide">
+       <bool>false</bool>
+      </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
         <string>Tab 1</string>
@@ -73,24 +76,24 @@
     </item>
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetDefaultConstraint</enum>
+      </property>
       <item>
-       <widget class="QLabel" name="hard_spacer">
-        <property name="minimumSize">
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Fixed</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
          <size>
-          <width>14</width>
-          <height>16</height>
+          <width>13</width>
+          <height>15</height>
          </size>
         </property>
-        <property name="maximumSize">
-         <size>
-          <width>323</width>
-          <height>16</height>
-         </size>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
+       </spacer>
       </item>
       <item>
        <widget class="QGraphicsView" name="graphicsView">
@@ -109,33 +112,301 @@
        </widget>
       </item>
       <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_curr">
+          <property name="minimumSize">
+           <size>
+            <width>61</width>
+            <height>16</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>61</width>
+            <height>16</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>100000000</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label">
+          <property name="text">
+           <string>/</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_outof">
+          <property name="text">
+           <string>100000000</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_pm">
+          <property name="minimumSize">
+           <size>
+            <width>16</width>
+            <height>16</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16</width>
+            <height>16</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>±</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_tail">
+          <property name="minimumSize">
+           <size>
+            <width>61</width>
+            <height>20</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>61</width>
+            <height>20</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>100000000</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <spacer name="horizontalSpacer_4">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QToolButton" name="left_quick">
+          <property name="minimumSize">
+           <size>
+            <width>25</width>
+            <height>25</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>25</width>
+            <height>25</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>&lt;&lt;</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QToolButton" name="left">
+          <property name="minimumSize">
+           <size>
+            <width>25</width>
+            <height>25</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>25</width>
+            <height>25</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>&lt;</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_5">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Maximum</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>80</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QToolButton" name="right">
+          <property name="minimumSize">
+           <size>
+            <width>25</width>
+            <height>25</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>25</width>
+            <height>25</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>&gt;</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QToolButton" name="right_quick">
+          <property name="minimumSize">
+           <size>
+            <width>25</width>
+            <height>25</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>25</width>
+            <height>25</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>&gt;&gt;</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+      <item>
        <widget class="Line" name="line">
+        <property name="maximumSize">
+         <size>
+          <width>800</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="do_it">
-        <property name="minimumSize">
-         <size>
-          <width>320</width>
-          <height>40</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>320</width>
-          <height>40</height>
-         </size>
-        </property>
-        <property name="toolTip">
-         <string>Запустить генерацию выходного массива изображений</string>
-        </property>
-        <property name="text">
-         <string>Генерировать</string>
-        </property>
-       </widget>
+       <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <item>
+         <spacer name="horizontalSpacer_7">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>0</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="do_it">
+          <property name="minimumSize">
+           <size>
+            <width>260</width>
+            <height>40</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>320</width>
+            <height>40</height>
+           </size>
+          </property>
+          <property name="toolTip">
+           <string>Запустить генерацию выходного массива изображений</string>
+          </property>
+          <property name="text">
+           <string>Генерировать</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_6">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>0</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
       </item>
      </layout>
     </item>
@@ -146,7 +417,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>1188</width>
      <height>21</height>
     </rect>
    </property>
@@ -154,13 +425,16 @@
     <property name="title">
      <string>Файл</string>
     </property>
-    <addaction name="new_prog"/>
-    <addaction name="open"/>
-    <addaction name="save"/>
-    <addaction name="save_all"/>
-    <addaction name="close_all"/>
     <addaction name="separator"/>
-    <addaction name="action_4"/>
+    <addaction name="menu_create"/>
+    <addaction name="menu_open"/>
+    <addaction name="menu_save"/>
+    <addaction name="menu_save_all"/>
+    <addaction name="menu_save_copy"/>
+    <addaction name="menu_close"/>
+    <addaction name="menu_close_all"/>
+    <addaction name="separator"/>
+    <addaction name="menu_exit"/>
    </widget>
    <addaction name="menu"/>
   </widget>
@@ -181,55 +455,140 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
-   <addaction name="new_prog"/>
-   <addaction name="save"/>
-   <addaction name="save_all"/>
-   <addaction name="close_all"/>
-   <addaction name="undo"/>
-   <addaction name="redo"/>
+   <addaction name="toolbar_create"/>
+   <addaction name="toolbar_open"/>
+   <addaction name="toolbar_save"/>
+   <addaction name="toolbar_save_all"/>
+   <addaction name="toolbar_close_all"/>
+   <addaction name="separator"/>
+   <addaction name="toolbar_undo"/>
+   <addaction name="toolbar_redo"/>
   </widget>
-  <action name="open">
-   <property name="icon">
-    <iconset resource="../res.qrc">
-     <normaloff>:/image/icon/resourses/Folder.ico</normaloff>:/image/icon/resourses/Folder.ico</iconset>
-   </property>
+  <action name="menu_create">
    <property name="text">
-    <string>Открыть проект</string>
+    <string>Новый (Ctrl+N)</string>
    </property>
-   <property name="shortcut">
-    <string>Ctrl+O</string>
-   </property>
-  </action>
-  <action name="save">
-   <property name="icon">
-    <iconset resource="../res.qrc">
-     <normaloff>:/image/icon/resourses/save.ico</normaloff>:/image/icon/resourses/save.ico</iconset>
-   </property>
-   <property name="text">
-    <string>Сохранить</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+S</string>
-   </property>
-  </action>
-  <action name="action_4">
-   <property name="text">
-    <string>Выход</string>
-   </property>
-  </action>
-  <action name="new_prog">
-   <property name="icon">
-    <iconset resource="../res.qrc">
-     <normaloff>:/image/icon/resourses/new.ico</normaloff>:/image/icon/resourses/new.ico</iconset>
-   </property>
-   <property name="text">
-    <string>Новый проект</string>
+   <property name="toolTip">
+    <string>Создать новый проект</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+N</string>
    </property>
   </action>
-  <action name="save_all">
+  <action name="menu_open">
+   <property name="text">
+    <string>Открыть (Ctrl+O)</string>
+   </property>
+   <property name="toolTip">
+    <string>Открыть проект с диска</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
+   </property>
+  </action>
+  <action name="menu_save">
+   <property name="text">
+    <string>Сохранить (Ctrl+S)</string>
+   </property>
+   <property name="toolTip">
+    <string>Сохранить текущий проект</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
+  </action>
+  <action name="menu_save_all">
+   <property name="text">
+    <string>Сохранить все (Ctrl+Alt+S)</string>
+   </property>
+   <property name="toolTip">
+    <string>Сохранить все открытые проекты</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Alt+S</string>
+   </property>
+  </action>
+  <action name="menu_save_copy">
+   <property name="text">
+    <string>Сохранить копию (Ctrl+Shift+S)</string>
+   </property>
+   <property name="toolTip">
+    <string>Сохранить текущий проект как копию</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+S</string>
+   </property>
+  </action>
+  <action name="menu_close">
+   <property name="text">
+    <string>Закрыть проект (Ctrl+W)</string>
+   </property>
+   <property name="toolTip">
+    <string>Закрыть текущий проект</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+W</string>
+   </property>
+  </action>
+  <action name="menu_close_all">
+   <property name="text">
+    <string>Закрыть все (Ctrl+Alt+W)</string>
+   </property>
+   <property name="toolTip">
+    <string>Закрыть все открытые проекты</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Alt+W</string>
+   </property>
+  </action>
+  <action name="menu_exit">
+   <property name="text">
+    <string>Выход (Ctrl+W)</string>
+   </property>
+   <property name="toolTip">
+    <string>Закрыть все проекты и выйти из приложения</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
+   </property>
+  </action>
+  <action name="toolbar_create">
+   <property name="icon">
+    <iconset resource="../res.qrc">
+     <normaloff>:/image/icon/resourses/new.ico</normaloff>:/image/icon/resourses/new.ico</iconset>
+   </property>
+   <property name="text">
+    <string>Новый</string>
+   </property>
+   <property name="toolTip">
+    <string>Создать новый проект</string>
+   </property>
+  </action>
+  <action name="toolbar_open">
+   <property name="icon">
+    <iconset resource="../res.qrc">
+     <normaloff>:/image/icon/resourses/Folder.ico</normaloff>:/image/icon/resourses/Folder.ico</iconset>
+   </property>
+   <property name="text">
+    <string>Открыть</string>
+   </property>
+   <property name="toolTip">
+    <string>Открыть проект с диска</string>
+   </property>
+  </action>
+  <action name="toolbar_save">
+   <property name="icon">
+    <iconset resource="../res.qrc">
+     <normaloff>:/image/icon/resourses/save.ico</normaloff>:/image/icon/resourses/save.ico</iconset>
+   </property>
+   <property name="text">
+    <string>Соханить</string>
+   </property>
+   <property name="toolTip">
+    <string>Сохранить текущий проек</string>
+   </property>
+  </action>
+  <action name="toolbar_save_all">
    <property name="icon">
     <iconset resource="../res.qrc">
      <normaloff>:/image/icon/resourses/save_all.ico</normaloff>:/image/icon/resourses/save_all.ico</iconset>
@@ -237,11 +596,11 @@
    <property name="text">
     <string>Сохранить все</string>
    </property>
-   <property name="shortcut">
-    <string>Ctrl+Shift+S</string>
+   <property name="toolTip">
+    <string>Сохранить все открытые проекты</string>
    </property>
   </action>
-  <action name="close_all">
+  <action name="toolbar_close_all">
    <property name="icon">
     <iconset resource="../res.qrc">
      <normaloff>:/image/icon/resourses/cross.ico</normaloff>:/image/icon/resourses/cross.ico</iconset>
@@ -250,25 +609,25 @@
     <string>Закрыть все</string>
    </property>
    <property name="toolTip">
-    <string>Закрыть все открытые</string>
+    <string>Закрыть все открытые проекты</string>
    </property>
   </action>
-  <action name="undo">
+  <action name="toolbar_undo">
    <property name="icon">
     <iconset resource="../res.qrc">
      <normaloff>:/image/icon/resourses/undo.ico</normaloff>:/image/icon/resourses/undo.ico</iconset>
    </property>
    <property name="text">
-    <string>Отмена</string>
+    <string>Отменить</string>
    </property>
    <property name="toolTip">
-    <string>Отменить последнее</string>
+    <string>Отмена последнего изменения (Ctrl+Z)</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Z</string>
    </property>
   </action>
-  <action name="redo">
+  <action name="toolbar_redo">
    <property name="icon">
     <iconset resource="../res.qrc">
      <normaloff>:/image/icon/resourses/redo.ico</normaloff>:/image/icon/resourses/redo.ico</iconset>
@@ -277,7 +636,7 @@
     <string>Повторить</string>
    </property>
    <property name="toolTip">
-    <string>Вернуть отменённое</string>
+    <string>Повторить отменённое изменение (Ctrl+Y)</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Y</string>
