--- a/res.qrc
+++ b/res.qrc
@@ -13,5 +13,6 @@
         <file>resourses/undo.ico</file>
         <file>resourses/down.ico</file>
         <file>resourses/up.ico</file>
+        <file>resourses/edit.ico</file>
     </qresource>
 </RCC>
